# opencl_image_filter

./: CMakeLists.txt  README.md  config_handle.h  main.cpp  png_handle.h  test.conf
libpng-1.5.14/: CMakeLists.txt  LICENSE  png.c  png.h  pnginfo.h  pngmem.c  pngpread.c  pngpriv.h  pngrutil.c  pngset.c  pngstruct.h  pngwio.c  pngwrite.c  pngwtran.c  pngwutil.c
src/: CMakeLists.txt  OpenCLConfig.cmake  config_handle.cpp  filtre_LoG_opencl.cl  main.cpp  opencl_error_info.hpp  png_handle.cpp
src/libpng-1.5.14/: pngconf.h  pngdebug.h  pngerror.c  pngget.c  pngread.c  pngrio.c  pngrtran.c  pngtrans.c
